Post type added in model

--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -49,6 +49,13 @@
     
     <br>
     <div class="container">
+      {% if user.is_authenticated %}
+  Hi {{ user.username }}!
+  <p><a href="{% url 'logout' %}">Log Out</a></p>
+{% else %}
+  <p>You are not logged in</p>
+  <a href="{% url 'login' %}">Log In</a>
+{% endif %}
           <!--Child templates can override the below block -->
           {% block content %}{% endblock %}
     </div>
