--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -30,6 +30,15 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/gratitude">Gratitude</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/question">Question</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/personal">Personal</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/moods">Moods</a>
         </li>
         <li class="nav-item">
