--- a/mood/templates/mood/base.html
+++ b/mood/templates/mood/base.html
@@ -27,10 +27,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/moods">Moods</a>
+          <a class="nav-link" href="/gratitude">Gratitude</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/question">Question</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/personal">Personal</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/moods">Moods</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
